# Toybox

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  AGENT.md  AGENTS.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CODE_STANDARDS.md  CONTRIBUTING.md  CodeStandard.md  LICENSE  README.md  TODO.txt  VSWorkspaceSettings.json  clean.bat  compile_commands.json  configs.lua  includes.lua  makeproj.bat  pat.patch  premake5.lua  premakeTbxUtils.lua  premakeproj.lua  premakeutils.lua
Dependencies/glad/: CMakeLists.txt
Dependencies/stbimg/: CMakeLists.txt  premake5.lua
Engine/: CMakeLists.txt  premake5.lua
Engine/Application/: premake5.lua
Engine/Application/Time/: DeltaTime.h
Engine/Core/: Core.h  TbxCore.h  Toybox.h  ToyboxEntryPoint.h  premake5.lua  tbxAPI.h  tbxapi.h  tbxpch.cpp  tbxpch.h
Engine/Core/Application/: App.h  IApp.h
Engine/Core/Assets/: Asset.cpp  Asset.h  AssetManager.cpp  AssetManager.h  Handles.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Texture.cpp  Texture.h
Engine/Core/Debug/: Assert.h  DebugAPI.h  Debugging.h  FallbackLogger.cpp  FallbackLogger.h  ILogger.h  Log.cpp  Log.h  LogLevel.h
Engine/Core/Events/: ApplicationEvent.h  ApplicationEvents.h  Callback.h  Event.h  EventAPI.h  EventCategory.h  EventDispatcher.cpp  EventDispatcher.h  Events.cpp  Events.h  KeyEvent.h  KeyEvents.h  LogEvents.h  MouseEvent.h  MouseEvents.h  WindowEvents.h
Engine/Core/Input/: IInputHandler.h  Input.cpp  Input.h  InputAPI.h
Engine/Core/Layers/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
Engine/Core/Math/: Bounds.cpp  Bounds.h  Int.h  Math.h  MathAPI.h  Matrices.cpp  Matrices.h  Matrix.cpp  (+14 more)
Engine/Debug/: premake5.lua
Engine/Engine/: EntryPoint.h  Toybox.h  ToyboxAPI.h  ToyboxEntryPoint.h  premake5.lua  tbxpch.h
Engine/Graphics/: premake5.lua
Engine/Launcher/: imgui.ini  premake5.lua
Engine/Loader/: premake5.lua
Engine/Math/: premake5.lua
Engine/Modules/: premake5.lua
Engine/Pipelines/: premake5.lua
Engine/Runtime/: App.cpp  App.h  CPP.HINT  Rendering.cpp  Rendering.h  Toybox.cpp  Toybox.h  ToyboxAPI.h  ToyboxEntryPoint.cpp  ToyboxEntryPoint.h  premake5.lua  tbxAPI.h
Engine/Systems/: premake5.lua
Engine/Tests/: CMakeLists.txt  premake5.lua
Engine/Utils/: premake5.lua
Launcher/: CMakeLists.txt  Launcher.rc  imgui.ini  premake5.lua  resource.h
Launcher/Source/: Launcher.cpp
core/: CMakeLists.txt
core/src/: application.cpp
core/tests/: CMakeLists.txt
engine/: CMakeLists.txt
engine/tests/: CMakeLists.txt  app_scope_tests.cpp  cancellation_token_tests.cpp  dispatcher_tests.cpp  plugin_loader_tests.cpp  plugin_meta_tests.cpp  service_locator_tests.cpp  timer_tests.cpp
examples/: CMakeLists.txt
examples/2d_example/: CMakeLists.txt
examples/3d_example/: CMakeLists.txt
examples/asset_example/: CMakeLists.txt
examples/asset_load_and_use_example/: CMakeLists.txt
examples/common/: CMakeLists.txt
examples/ecs_example/: CMakeLists.txt
examples/input_example/: CMakeLists.txt
examples/lighting_example/: CMakeLists.txt
examples/physics_example/: CMakeLists.txt
examples/plugin_example/: CMakeLists.txt
modules/: CMakeLists.txt
modules/app/: CMakeLists.txt
modules/assets/: CMakeLists.txt
modules/async/: CMakeLists.txt
modules/audio/: CMakeLists.txt
modules/common/: CMakeLists.txt
modules/debugging/: CMakeLists.txt
modules/ecs/: CMakeLists.txt
modules/file_system/: CMakeLists.txt
modules/files/: CMakeLists.txt
modules/graphics/: CMakeLists.txt
modules/input/: CMakeLists.txt
modules/math/: CMakeLists.txt
modules/messaging/: CMakeLists.txt
modules/os/: CMakeLists.txt
modules/physics/: CMakeLists.txt
modules/plugin_api/: CMakeLists.txt
modules/std/: CMakeLists.txt
modules/time/: CMakeLists.txt
plugins/: CMakeLists.txt
plugins/assimp_model_loader/: CMakeLists.txt
plugins/entt_ecs/: CMakeLists.txt
plugins/gl_rendering/: CMakeLists.txt
plugins/glsl_shader_loader/: CMakeLists.txt
plugins/jolt_physics/: CMakeLists.txt
plugins/mat_material_loader/: CMakeLists.txt
plugins/material_loader/: CMakeLists.txt
plugins/opengl_rendering/: CMakeLists.txt
plugins/sdl_adapter/: CMakeLists.txt
plugins/sdl_base_systems/: CMakeLists.txt
plugins/sdl_input/: CMakeLists.txt
plugins/sdl_opengl_adapter/: CMakeLists.txt
plugins/sdl_opengl_context_manager/: CMakeLists.txt
plugins/sdl_windowing/: CMakeLists.txt
plugins/sdladapter/: CMakeLists.txt
plugins/sdlwindowing/: CMakeLists.txt
plugins/sdr_shader_loader/: CMakeLists.txt
plugins/shader_loader/: CMakeLists.txt
plugins/spd_console_logger/: CMakeLists.txt
plugins/spd_file_logger/: CMakeLists.txt
plugins/spd_logger/: CMakeLists.txt
plugins/spdconsolelogger/: CMakeLists.txt
plugins/spdfilelogger/: CMakeLists.txt
plugins/spdlogger/: CMakeLists.txt
plugins/stb_image_loader/: CMakeLists.txt
plugins/tbxstdwrappers/: CMakeLists.txt
plugins/tests/: CMakeLists.txt  importer_tests.cpp
resources/: CMakeLists.txt  Default.frag  Default.glsl  Default.mat  Default.sdr  Default.vert  DefaultLit.frag  DefaultLit.mat  DefaultLit.vert  DefaultUnlit.frag  DefaultUnlit.mat  DefaultUnlit.vert  DeferredGeometry.frag  DeferredGeometry.vert  DeferredLighting.frag  DeferredLighting.mat  DeferredLighting.vert  Globals.glsl  Lights.glsl
resources/Materials/: DefaultLit.mat  DefaultUnlit.mat  DeferredLighting.mat  DeferredLocalLightVolume.mat  DirectionalShadowMap.mat  FallbackMagenta.mat  Flat.mat  Pbr.mat  SimpleLighting.mat  SimplePost.mat  SimpleShadow.mat  Wireframe.mat
resources/Shaders/: DefaultLit.frag  DefaultLit.vert  DefaultUnlit.frag  DefaultUnlit.vert  DeferredGeometry.frag  DeferredGeometry.vert  DeferredLightCulling.comp  DeferredLighting.frag  DeferredLighting.glsl  DeferredLighting.vert  DeferredLocalLightVolume.frag  DeferredLocalLightVolume.vert  DeferredShadows.glsl  DererredLighting.frag  DirectionalShadowMap.vert  Flat.frag  Flat.vert  Fullscreen.vert  Globals.glsl  Pbr.frag  Pbr.vert  SimpleLighting.frag  SimplePost.frag  SimpleShadow.vert  Wireframe.frag  Wireframe.geom  Wireframe.vert
(+2900 files in other folders)
